Atualizar o galery.html

--- a/galery.html
+++ b/galery.html
@@ -12,10 +12,11 @@
   <header>
     
   </header>
-  
   <main>
-    
+    <section class="galeria">
+      <img src="./images/o fim está próximo.jpg" class="ofim">
+    </section>
   </main>
-</body>
+ </body>
 
 </html>
